edit name of page  Confirmation-message.html

--- a/G-a-r-a-s-u.html
+++ b/G-a-r-a-s-u.html
@@ -331,7 +331,7 @@
     <div class="grid grid-cols-2 xl:grid-cols-4 2xl:grid-cols-5 mx-5 mt-5 gap-3 md:gap-9 md:mr-9 xl:mr-12 md:ml-60 xl:ml-16">
 <!-- ////////////// -->
 
-        <div class=" items-center  min-w-[138px] max-w-[251px] h-[153px] md:h-[192px]  rounded-[20px] border border-[#E8E8E8] bg-white  	 " style="
+        <div class=" items-center  min-w-[138px] max-w-[251px] h-[153px] md:h-[192px]  rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
     <div class="flex gap-1.5 mt-9 justify-center mb-2.5 md:mb-5 ">
@@ -354,7 +354,7 @@
     </div>
 <!-- ////////////// -->
 
-        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px]  rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px]  rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
 
@@ -388,7 +388,7 @@
     </div>
 <!-- ////////////// -->
 
-        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
     <div class="flex gap-1.5 mt-9 justify-center mb-2.5 md:mb-5 ">
@@ -413,7 +413,7 @@
     </div>
 <!-- ////////////// -->
 
-        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
     <div class="flex gap-1.5 mt-9 justify-center mb-2.5 md:mb-5 ">
@@ -441,7 +441,7 @@
     </div>
 <!-- ////////////// -->
 
-        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
     <div class="flex gap-1.5 mt-9 justify-center mb-2.5 md:mb-5 md:mr-4 ">
@@ -462,12 +462,12 @@
 </p>
     </div>
 <!-- ////////////// -->
-        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center  min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
         <div class="flex w-full justify-end"><h4 class="flex pt-2 md:pt-0 w-5/12 md:w[37%] justify-center md:items-center rounded-tl-[20px] bg-[#DE0F0F] h-7 md:h-11	 text-white text-xs md:text-xl">قريباً</h4></div>
 
-    <div class="flex gap-1.5  justify-center mb-2.5 md:mb-2 lg:mb-2 xl:mb-5 mx-2 md:mx-5 ">
+    <div class="flex gap-1.5  justify-center mb-2.5 md:mb-2 lg:mb-2 xl:mb-5 mx-2 md:mx-5 xl:mx-1 2xl:mx-2 ">
         <div>
 <svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
   <g clip-path="url(#clip0_1150_16549)">
@@ -504,11 +504,11 @@
 </p>
     </div>
 <!-- /////////////////// -->
-        <div class=" items-center min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        <div class=" items-center min-w-[138px]  max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white" style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
     <div class="flex w-full justify-end"><h4 class="flex pt-2 md:pt-0 w-5/12 md:w[37%] justify-center md:items-center rounded-tl-[20px] bg-[#DE0F0F] h-7 md:h-11	 text-white text-xs md:text-xl">قريباً</h4></div>
-    <div class="flex gap-1.5 justify-center mb-2.5 md:mb-5 mx-2 md:mx-5">
+    <div class="flex gap-1.5  justify-center mb-2.5 md:mb-2 lg:mb-2 xl:mb-5 mx-2 md:mx-5 ">
         <div>
 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="28" viewBox="0 0 27 28" fill="none">
   <path d="M23.5841 3.71081H21.3069V1.34941C21.307 0.607194 20.7214 0 20.006 0H3.41542C2.69977 0 2.11426 0.607194 2.11426 1.34941V22.9397C2.11426 23.6819 2.69977 24.2891 3.41548 24.2891H5.69259V26.6506C5.69259 27.3928 6.27784 28 6.99381 28H18.0537C18.7691 28 19.7814 27.5837 20.3022 27.0753L23.9371 23.5271C24.4586 23.0187 24.8847 21.9952 24.8847 21.2531L24.8853 5.06033C24.8853 4.31806 24.2997 3.71081 23.5841 3.71081ZM5.69249 5.06028V23.2771H3.41542C3.23913 23.2771 3.09016 23.1226 3.09016 22.9398V1.34941C3.09016 1.16659 3.23913 1.0121 3.41542 1.0121H20.0061C20.1821 1.0121 20.3314 1.16659 20.3314 1.34941V3.71087H6.99371C6.27773 3.71087 5.69249 4.31806 5.69249 5.06028ZM23.2682 22.7903L19.6333 26.3382C19.5589 26.4108 19.4619 26.4819 19.3548 26.5497V23.4457C19.3548 23.214 19.445 23.0055 19.5936 22.8503C19.7436 22.6961 19.9446 22.6024 20.1681 22.6024H23.4228C23.3723 22.6735 23.3206 22.739 23.2682 22.7903ZM23.9087 21.2529C23.9087 21.3531 23.8911 21.4692 23.8645 21.5903H20.168C19.1808 21.5923 18.3809 22.4218 18.3789 23.4457V26.947C18.2628 26.9713 18.1509 26.9878 18.0536 26.9878H6.99371V26.9878C6.81705 26.9878 6.66844 26.8334 6.66844 26.6505V5.06022C6.66844 4.8774 6.8171 4.72291 6.99371 4.72291H23.584C23.7603 4.72291 23.9093 4.8774 23.9093 5.06022L23.9087 21.2529Z" fill="#25A0D5"/>
