edit Nationality ratios page

--- a/nationality-ratios.html
+++ b/nationality-ratios.html
@@ -322,15 +322,40 @@
 </header>
 <main class=" w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
     <section>
-        <div class="print:hidden sm:flex items-center justify-between mt-5 md:my-11">
+        <div class="print:hidden sm:flex items-center justify-between mt-[101px] md:mt-[131px] md:my-11">
             <div class="print:hidden flex mr-[3.5%] gap-2 mb-5 sm:my-0">
-                <p class="print:hidden text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline"> التقارير <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl ">></p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline">إنشاء تقرير </p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl ">></p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline">تقرير نطاقات المنشأة</p><p class="text-[#25A0D5] text-[10px] md:text-base xl:text-xl  "> > </p> <p class="text-[#25A0D5] text-[10px] md:text-base xl:text-xl underline ">نتائج التقرير</p></p>
+                <p class="print:hidden text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline"> التقارير <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl ">></p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline">إنشاء تقرير </p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl ">></p> <p class="text-[#BDBDBD] text-[10px] md:text-base xl:text-xl underline">تقرير نسب الجنسيات </p><p class="text-[#25A0D5] text-[10px] md:text-base xl:text-xl  "> > </p> <p class="text-[#25A0D5] text-[10px] md:text-base xl:text-xl underline ">نتائج التقرير</p></p>
             </div>
             <div class="print:hidden ml-[3.5%] flex justify-end">
                 <a class="print:hidden items-center ml-0 text-white bg-[#25A0D5] rounded-lg text-sm md:text-base w-[102px] md:w-[121px] p-1  m-2 h-11 rounded-[10px] flex justify-center font-bold"> + تقرير جديد  </a>
             </div>
         </div>
-
+        <ol class="text-xs md:text-sm lg:text-base ml-[3.5%]  mr-[3.5%] flex flex-col gap-5 list-disc list-inside mt-3 md:mt-5">
+            <li>هذا التقرير يوضح نسب الجنسيات في منشآت الرقم الموحد مما يتيح لصاحب العمل معرفة العدد الذي يمكن للمنشأة استقطابه من هذه الجنسيات</li>
+            <li>الحد الأعلى المعلن لنسب الجنسيات من وزارة الموارد البشرية هي: 40% للجنسية الهندية والبنجلادشية و 25% للجنسية اليمنية و 1% للجنسية الاثيوبية</li>
+            <li>تم بناء التقرير على أن الحد الأعلى لكل جنسية هو 40% عدا الجنسيات المعلنة من قبل وزارة الموارد البشرية ويفضل العمل على ذلك لتفادي مشاكل تجاوز</li>
+            <li>الحد الأعلى من الجنسيات عند نقل الكفالة او إصدار تأشيرات جديدة ( كما نؤكد في إلمام أن الهدف من هذا التقرير هو توضيح نسب الجنسيات فقط )</li>
+        </ol>
+        <div class="md:flex">
+            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] mt-3 w-[92%] max-w-[971px] min-w-[200px]">
+                <div class="flex gap-3 mt-3.5 md:mt-7 mr-3">
+                    <h4 class="text-xs md:text-sm leading-5	">المنشآت في هذا التقرير:</h4>
+                    <h3 class="text-[#25A0D5] text-[10px] md:text-xs leading-5	 ">إلمام العربية لتقنية المعلومات</h3>
+                </div>
+                <h4 class="text-sm my-3 mr-3">الفروع</h4>
+                <div class="flex mr-3 gap-5 mb-4 md:mb-7">
+                    <h3 class="text-[#25A0D5] text-xs leading-5" >مجموعة جمال 3</h3>
+                    <h3 class="text-[#25A0D5] text-xs leading-5">مجموعة جمال 2</h3>
+                    <h3 class="text-[#25A0D5] text-xs leading-5">مجموعة جمال 1</h3>
+                </div>
+            </div>
+            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] mt-3 max-w-[404px] min-w-[200px]">
+                <div class="flex gap-3 mt-3.5 md:mt-7 mr-3 mb-4 md:mb-7 max-w-[404px] min-w-[200px] items-center md:flex-col xl:flex-row">
+                    <p class="text-xs md:text-sm ">إجمالي عدد السعوديين في المنشآت في هذا التقرير ولا يتم احتسابهم في نسبة الجنسيات:</p>
+                <h5 class="text-white text-xl rounded-[6px]	bg-[#25A0D5] flex w-10	h-8	p-5	justify-center items-center mr-[6%] ml-[6%]">5</h5>
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
