2-edit Nationality ratios page

--- a/nationality-ratios.html
+++ b/nationality-ratios.html
@@ -336,8 +336,8 @@
             <li>تم بناء التقرير على أن الحد الأعلى لكل جنسية هو 40% عدا الجنسيات المعلنة من قبل وزارة الموارد البشرية ويفضل العمل على ذلك لتفادي مشاكل تجاوز</li>
             <li>الحد الأعلى من الجنسيات عند نقل الكفالة او إصدار تأشيرات جديدة ( كما نؤكد في إلمام أن الهدف من هذا التقرير هو توضيح نسب الجنسيات فقط )</li>
         </ol>
-        <div class="md:flex">
-            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] mt-3 w-[92%] max-w-[971px] min-w-[200px]">
+        <div class="md:flex md:gap-8">
+            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] md:ml-0 mr-[3.5%] mt-3 w-[92%] max-w-[971px] min-w-[200px]">
                 <div class="flex gap-3 mt-3.5 md:mt-7 mr-3">
                     <h4 class="text-xs md:text-sm leading-5	">المنشآت في هذا التقرير:</h4>
                     <h3 class="text-[#25A0D5] text-[10px] md:text-xs leading-5	 ">إلمام العربية لتقنية المعلومات</h3>
@@ -349,7 +349,7 @@
                     <h3 class="text-[#25A0D5] text-xs leading-5">مجموعة جمال 1</h3>
                 </div>
             </div>
-            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] mt-3 max-w-[404px] min-w-[200px]">
+            <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] md:mr-0 mt-3 max-w-[404px] min-w-[200px]">
                 <div class="flex gap-3 mt-3.5 md:mt-7 mr-3 mb-4 md:mb-7 max-w-[404px] min-w-[200px] items-center md:flex-col xl:flex-row">
                     <p class="text-xs md:text-sm ">إجمالي عدد السعوديين في المنشآت في هذا التقرير ولا يتم احتسابهم في نسبة الجنسيات:</p>
                 <h5 class="text-white text-xl rounded-[6px]	bg-[#25A0D5] flex w-10	h-8	p-5	justify-center items-center mr-[6%] ml-[6%]">5</h5>
