--- a/nationality-ratios.html
+++ b/nationality-ratios.html
@@ -8,9 +8,9 @@
       <script src="confing.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
       <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    </head>
 <body style="
     font-family: Janna LT;">
- </head>
  <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
 
@@ -336,6 +336,8 @@
             <li>تم بناء التقرير على أن الحد الأعلى لكل جنسية هو 40% عدا الجنسيات المعلنة من قبل وزارة الموارد البشرية ويفضل العمل على ذلك لتفادي مشاكل تجاوز</li>
             <li>الحد الأعلى من الجنسيات عند نقل الكفالة او إصدار تأشيرات جديدة ( كما نؤكد في إلمام أن الهدف من هذا التقرير هو توضيح نسب الجنسيات فقط )</li>
         </ol>
+    </section>
+    <section>
         <div class="md:flex md:gap-8">
             <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] md:ml-0 mr-[3.5%] mt-3 w-[92%] max-w-[971px] min-w-[200px]">
                 <div class="flex gap-3 mt-3.5 md:mt-7 mr-3">
@@ -352,10 +354,33 @@
             <div class="bg-white rounded-[20px] border border-[#D7D7D7] ml-[3.5%] mr-[3.5%] md:mr-0 mt-3 max-w-[404px] min-w-[200px]">
                 <div class="flex gap-3 mt-3.5 md:mt-7 mr-3 mb-4 md:mb-7 max-w-[404px] min-w-[200px] items-center md:flex-col xl:flex-row">
                     <p class="text-xs md:text-sm ">إجمالي عدد السعوديين في المنشآت في هذا التقرير ولا يتم احتسابهم في نسبة الجنسيات:</p>
-                <h5 class="text-white text-xl rounded-[6px]	bg-[#25A0D5] flex w-10	h-8	p-5	justify-center items-center mr-[6%] ml-[6%]">5</h5>
+                    <h5 class="text-white text-xl rounded-[6px]	bg-[#25A0D5] flex w-10	h-8	p-5	justify-center items-center mr-[6%] ml-[6%]">5</h5>
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <!---->
+        <table class="text-[10px] md:text-sm xl:text-base mt-[45px] m-auto w-[95%]">
+            <thead>
+                <tr class="flex bg-[#D4F0FB] justify-around rounded-xl h-11 mb-5 items-center gap-[11px] text-justfiy px-[10px]">
+            <th>المنشأة</th>
+            <th>السجل التجاري</th>
+            <th>نوع التقرير</th>
+            <th>تاريخ الإنشاء</th>
+            <th>تحميل</th>
+        </tr>
+    </thead>
+        <tbody>
+            <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 mb-5 gap-[11px] text-justfiy rounded-xl px-[10px]">
+                <td class="max-w-[100px]">#435463</td>
+                <td class="max-w-[100px]">شركة كذا</td>
+                <td>12345678901</td>
+                <td>%Y-%m-%d</td>
+                <td><a href="#" class="text-[#25A0D5]">عرض</a> / <a href="#" class="text-[#25A0D5]">تحميل</a></td>
+            </tr>
+        </tbody>
+    </table>
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
