--- a/nationality-ratios.html
+++ b/nationality-ratios.html
@@ -9,8 +9,7 @@
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
       <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
-<body style="
-    font-family: Janna LT;">
+<body class="font-['Janna_LT']">
  <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
 
@@ -361,23 +360,25 @@
     </section>
     <section>
         <!---->
-        <table class="text-[10px] md:text-sm xl:text-base mt-[45px] m-auto w-[95%]">
+        <table class="text-[10px] md:text-sm xl:text-base mt-5 m-auto w-[95%]">
             <thead>
                 <tr class="flex bg-[#D4F0FB] justify-around rounded-xl h-11 mb-5 items-center gap-[11px] text-justfiy px-[10px]">
-            <th>المنشأة</th>
-            <th>السجل التجاري</th>
-            <th>نوع التقرير</th>
-            <th>تاريخ الإنشاء</th>
-            <th>تحميل</th>
+            <th>الجنسيات في الكيان</th>
+            <th>عدد العمالة لكل جنسية</th>
+            <th>نسبة العمال في الكيان</th>
+            <th>الحد الأعلى من النسب المسموحة</th>
+            <th>العدد الذي يمكن إضافته دون</th>
+            <th>العدد المطلوب إضافته</th>
         </tr>
     </thead>
         <tbody>
             <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 mb-5 gap-[11px] text-justfiy rounded-xl px-[10px]">
-                <td class="max-w-[100px]">#435463</td>
-                <td class="max-w-[100px]">شركة كذا</td>
-                <td>12345678901</td>
-                <td>%Y-%m-%d</td>
-                <td><a href="#" class="text-[#25A0D5]">عرض</a> / <a href="#" class="text-[#25A0D5]">تحميل</a></td>
+                <td class="max-w-[100px]">باكستاني</td>
+                <td class="max-w-[100px]">15</td>
+                <td>50%</td>
+                <td>40</td>
+                <td class=" w-[62px] h-8 rounded-xl	border border-[#D7D7D7] text-center	font-[Inter] text-sm max-w-[100px]">10</td>
+                <td><input class=" w-[62px] h-8 rounded-xl	border border-[#D7D7D7] text-center	font-[Inter] text-sm bg-grey max-w-[100px]" type="text"></td>
             </tr>
         </tbody>
     </table>
